RESOLVED FIXED273566
[WebGPU] RenderBundleEncoder::endCurrentICB may fail validation when the bundle has zero draw calls
https://bugs.webkit.org/show_bug.cgi?id=273566
Summary [WebGPU] RenderBundleEncoder::endCurrentICB may fail validation when the bund...
Mike Wyrzykowski
Reported 2024-05-01 12:56:31 PDT
[WebGPU] RenderBundleEncoder::endCurrentICB may fail validation when the bundle has zero draw calls
Attachments
Mike Wyrzykowski
Comment 1 2024-05-01 12:56:45 PDT
Mike Wyrzykowski
Comment 2 2024-05-01 13:09:00 PDT
EWS
Comment 3 2024-05-02 23:41:48 PDT
Committed 278303@main (33411be973ec): <https://commits.webkit.org/278303@main> Reviewed commits have been landed. Closing PR #27998 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.