[WebGPU] RenderBundleEncoder::endCurrentICB may fail validation when the bundle has zero draw calls https://bugs.webkit.org/show_bug.cgi?id=273566 <radar://127364748>

Reviewed by Dan Glastonbury.

No need to split an ICB which has thus far encoded zero draw commands.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-273566-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-273566.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::setPipeline):

Canonical link: https://commits.webkit.org/278303@main